# openclaw-linux

./: .gitignore  AGENTS.md  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  VISION.md
.agent/workflows/: update_kelpbot.md
.claude/skills/clawd-kernel/: SKILL.md
.claude/skills/kelp-os/: SKILL.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: clawd-linux-ci.yml  kelp-os-ci.yml
buildroot/: Config.in  external.desc  external.mk
buildroot/board/kelp/: genimage.cfg  post_build.sh  post_image.sh
buildroot/configs/: kelp_aarch64_defconfig  kelp_x86_64_defconfig
buildroot/package/kelp-config/: Config.in  kelp-config.mk
channels/discord/: CMakeLists.txt
channels/signal/: CMakeLists.txt
channels/slack/: CMakeLists.txt
channels/telegram/: CMakeLists.txt
cmake/: ClawdPackage.cmake  FindSqliteVec.cmake  KelpPackage.cmake
cmake/toolchain/: aarch64-buildroot.cmake  x86_64-buildroot.cmake
distro/: Makefile
distro/installer/: preseed.cfg
distro/repo/: README.md
kernel/: Kbuild  Makefile  clawd_chardev.c  clawd_internal.h  clawd_kernel.h  clawd_mod.c  clawd_netfilter.c  clawd_procfs.c  dkms.conf
kernel/module/: Kbuild  Makefile  dkms.conf  kelp_accel.c  kelp_ai_sched.c  kelp_chardev.c  kelp_internal.h  kelp_mod.c  kelp_netfilter.c  kelp_procfs.c  kelp_semfs.c
lib/agents/: CMakeLists.txt
lib/agents/include/clawd/: agent.h  provider.h  sandbox.h  tool.h
lib/agents/src/: agent.c  provider.c  sandbox.c  tool.c
lib/agents/src/providers/: anthropic.c  bedrock.c  google.c  ollama.c  openai.c
lib/agents/src/sandbox/: cgroup.c  mount.c  namespace.c  sandbox_internal.h  seccomp.c
lib/agents/src/tools/: bash_tool.c  file_read.c  file_write.c  web_fetch.c
lib/agents/tests/: test_agents.c
lib/config/: CMakeLists.txt
lib/config/include/clawd/: config.h  paths.h  schema.h
lib/config/src/: config.c  paths.c  schema.c
lib/config/tests/: test_config.c
lib/core/: CMakeLists.txt
lib/core/include/clawd/: buf.h  clawd.h  crypto.h  err.h  json.h  log.h  map.h  str.h  vec.h
lib/core/src/: buf.c  crypto.c  err.c  json.c  log.c  map.c  str.c
lib/core/tests/: test_core.c
lib/kernel/: CMakeLists.txt
lib/memory/: CMakeLists.txt
lib/memory/include/clawd/: embeddings.h  memory.h  watcher.h
lib/memory/src/: bm25.c  embeddings.c  memory.c  watcher.c
lib/memory/tests/: test_memory.c
lib/net/: CMakeLists.txt
lib/net/include/clawd/: heartbeat.h  http.h  mdns.h  ssrf.h  tls.h
lib/net/src/: heartbeat.c  http.c  mdns.c  ssrf.c  tls.c
lib/net/tests/: test_net.c
lib/process/: CMakeLists.txt
lib/process/include/clawd/: process.h  pty.h  signals.h  supervisor.h
lib/process/src/: process.c  pty.c  signals.c  supervisor.c
lib/process/tests/: test_process.c
lib/security/: CMakeLists.txt
lib/security/include/clawd/: audit.h  fs_perm.h  path_scan.h  policy.h  timing.h
lib/security/src/: audit.c  fs_perm.c  path_scan.c  policy.c  timing.c
lib/security/tests/: test_security.c
lib/terminal/: CMakeLists.txt
lib/terminal/include/clawd/: ansi.h  progress.h  prompt.h  table.h
lib/terminal/src/: ansi.c  progress.c  prompt.c  table.c
lib/terminal/tests/: test_terminal.c
scripts/: build-os.sh  build.sh  install-deps.sh  package.sh  run-qemu.sh  setup-repo.sh  test.sh
scripts/shell-helpers/: README.md  kelp-helpers.sh
scripts/systemd/: kelp-auth-monitor.service  kelp-auth-monitor.timer
system/: CMakeLists.txt
system/channels/discord/: CMakeLists.txt
system/channels/discord/src/: main.c
system/channels/signal/: CMakeLists.txt
system/channels/signal/src/: main.c
system/channels/slack/: CMakeLists.txt
system/channels/slack/src/: main.c
system/channels/telegram/: CMakeLists.txt
system/channels/telegram/src/: main.c
system/init/: kelp-init.c
system/lib/agents/: CMakeLists.txt
system/lib/agents/include/kelp/: agent.h  provider.h  sandbox.h  tool.h
system/lib/agents/src/: agent.c  provider.c  sandbox.c  tool.c
system/lib/agents/src/providers/: anthropic.c  bedrock.c  google.c  ollama.c  openai.c
system/lib/agents/src/sandbox/: cgroup.c  mount.c  namespace.c  sandbox_internal.h  seccomp.c
system/lib/agents/src/tools/: bash_tool.c  file_read.c  file_write.c  web_fetch.c
system/lib/agents/tests/: test_agents.c
system/lib/config/: CMakeLists.txt
system/lib/config/include/kelp/: config.h  paths.h  schema.h
system/lib/config/src/: config.c  paths.c  schema.c
system/lib/config/tests/: test_config.c
system/lib/core/: CMakeLists.txt
system/lib/core/include/kelp/: buf.h  crypto.h  err.h  json.h  kelp.h  log.h  map.h  str.h  vec.h
system/lib/core/src/: buf.c  crypto.c  err.c  json.c  log.c  map.c  str.c
system/lib/core/tests/: test_core.c
system/lib/kernel/: CMakeLists.txt
system/lib/kernel/include/kelp/: kernel.h
system/lib/kernel/src/: kernel.c
system/lib/memory/: CMakeLists.txt
system/lib/memory/include/kelp/: embeddings.h  memory.h  watcher.h
system/lib/memory/src/: bm25.c  embeddings.c  memory.c  watcher.c
system/lib/memory/tests/: test_memory.c
system/lib/net/: CMakeLists.txt
system/lib/net/include/kelp/: heartbeat.h  http.h  mdns.h  ssrf.h  tls.h
system/lib/net/src/: heartbeat.c  http.c  mdns.c  ssrf.c  tls.c
system/lib/net/tests/: test_net.c
system/lib/process/: CMakeLists.txt
system/lib/process/include/kelp/: process.h  pty.h  signals.h  supervisor.h
system/lib/process/src/: process.c  pty.c  signals.c  supervisor.c
system/lib/process/tests/: test_process.c
system/lib/security/: CMakeLists.txt
system/lib/security/include/kelp/: audit.h  fs_perm.h  path_scan.h  policy.h  timing.h
system/lib/security/src/: audit.c  fs_perm.c  path_scan.c  policy.c  timing.c
system/lib/security/tests/: test_security.c
system/lib/terminal/: CMakeLists.txt
system/lib/terminal/include/kelp/: ansi.h  progress.h  prompt.h  table.h
system/lib/terminal/src/: ansi.c  progress.c  prompt.c  table.c
system/lib/terminal/tests/: test_terminal.c
tests/: CMakeLists.txt
tests/integration/: CMakeLists.txt  test_config_load.c
(+65 files in other folders)
